tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0249/input.js
"use strict"; function t(__proto__, __proto__) { }
